# bevy_ecs_graphics

./: .gitignore  Cargo.toml  README.md
client/: .gitignore  TODO.md  package.json
client/src/: App.tsx  main.tsx
client/src-tauri/: tauri.conf.json
client/src/api/: bevy_remote.ts  discover.ts
client/src/components/: Header.tsx  connection-manager.tsx  methods.tsx  sidebar.tsx  theme-provider.tsx  theme-selector.tsx
client/src/hooks/: useBevyConnection.ts  useConnection.ts  useConnections.ts  useMethods.ts  useTheme.ts
client/src/lib/: axios.ts  server.ts
client/src/router/: index.tsx  root.tsx  router.tsx  setting.tsx
crates/protocol/: Cargo.toml
crates/protocol/examples/: basic.rs
crates/protocol/src/: lib.rs
